--- a/myinfo/templates/myinfo/home.html
+++ b/myinfo/templates/myinfo/home.html
@@ -57,7 +57,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
           <a class="nav-link" href="https://www.facebook.com/profile.php?id=100008609101349">Facebook </a>
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="{% url 'all blog' %}">Blog</a>
         </div>
       </div>
     </nav>
